--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "serve": "^11.3.0"
   },
   "scripts": {
