--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "serve": "^11.3.0"
   },
   "scripts": {
